# wasm-face-detection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bundle.js  cppmain.js  cppmain.wasm  index.html  index.ts  main.cpp  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: index.ts  main.cpp
